Remove options page

--- a/manifest.json
+++ b/manifest.json
@@ -19,11 +19,7 @@
   "background": {
     "service_worker": "bg-wrapper.js"
   },
-  "permissions": ["storage", "contextMenus"],
-  "options_ui": {
-    "page": "Options/options.html",
-    "open_in_tab": true
-  },
+  "permissions": ["storage"],
   "content_scripts": [
     {
       "js": ["injectScript.js"],
