--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "__MSG_extension_name__",
   "short_name": "ClnOnClk",
-  "version": "1.0",
+  "version": "1.1",
   "content_security_policy": {
     "extension_pages": "default-src 'self'"
   },
@@ -19,7 +19,7 @@
   "background": {
     "service_worker": "bg-wrapper.js"
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "contextMenus"],
   "content_scripts": [
     {
       "js": ["injectScript.js"],
